# flake8-helper

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci_linux.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: flake8-helper.rst
flake8_helper/: __init__.py
tests/: requirements.txt
tests/test_flake8_encodings/: __init__.py  test_plugin.py  test_visitor.py
tests/test_flake8_slots/: __init__.py  test_errors.py  test_good_code.py
