[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-helper"
version = "0.1.1"
description = "A helper library for Flake8 plugins."
readme = "README.rst"
keywords = [ "flake8",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-helper"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-helper/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-helper"
Documentation = "https://flake8-helper.readthedocs.io/en/latest"
